# yolo-wasm

./: README.md  package-lock.json  package.json
imgs/: architecture.drawio
public/: index.html
src/: App.js
src/components/: camera.component.js  carmera.component.js  flexcontainer.component.js  footer.component.js  inference.component.js  lscamera.component.js
src/layouts/: base.layout.js
wasm-model/: Cargo.toml
wasm-model/src/: coco_classes.rs  io.rs  lib.rs  log.rs  utils.rs  yolov8_model.rs
