[package]
name = "wasm-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.3.3"
candle-nn = "0.3.3"
image = "0.24.8"
serde = "1.0.196"
wasm-bindgen = "0.2.91"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
