[package]
name = "wasm-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.3.3"
candle-nn = "0.3.3"
image = "0.24.8"
serde = "1.0.196"
wasm-bindgen = "0.2.91"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.41"
js-sys = "0.3.68"
once_cell = "1.19.0"
lazy_static = "1.4.0"
base64 = "0.21.7"
imageproc = "0.23.0"
rusttype = "0.9.3"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Blob',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'ImageData',
  'Node',
  'Window',
  'Request',
  'RequestCache',
  'RequestInit',
  'RequestMode',
  'Response',
  'Performance',
  'TextMetrics',
]


[lib]
crate-type = ["cdylib"]
